Fix text-answer vertical alignment with formulas & zoomed-out borders

--- a/packages/core/src/components/TextAnswer.less
+++ b/packages/core/src/components/TextAnswer.less
@@ -1,7 +1,7 @@
 .text-answer {
   border: 1px solid transparent;
   border-bottom: none;
-  box-shadow: inset 0 0 0 1px @colors[grey];
+  box-shadow: inset 0 0 0 1.5px @colors[grey];
   border-radius: 0.25rem;
   outline: none;
 
@@ -17,7 +17,7 @@
     min-width: 8rem;
     max-width: 100%;
     padding: 0 0.5rem 2px;
-    vertical-align: top;
+    vertical-align: baseline;
     &:focus {
       position: relative;
     }
